{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 42,
  "lineage": "1a4d78bc-ca20-a6b7-cb37-aabfb32b96f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1ForBonVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-040c53be1d5de9b9d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040c53be1d5de9b9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b67652ddf27b0555",
            "private_dns": "ip-10-2-4-187.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.4.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a7514588ea38a00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a20833eebd4264b6",
            "tags": {
              "Environment": "Production",
              "Name": "instance1ForBonVPC"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "instance1ForBonVPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa0ae44ca39be70c"
            ]
          },
          "dependencies": [
            "aws_security_group.forBonInstances",
            "aws_subnet.private_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2ForBonVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-0e688751a77e26a51",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e688751a77e26a51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c673d18c1cd7a174",
            "private_dns": "ip-10-2-4-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.4.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d29404690e5c6924",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a20833eebd4264b6",
            "tags": {
              "Environment": "Production",
              "Name": "instance2ForBonVPC"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "instance2ForBonVPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa0ae44ca39be70c"
            ]
          },
          "dependencies": [
            "aws_security_group.forBonInstances",
            "aws_subnet.private_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance3ForBonVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-0bef13fba81a99682",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bef13fba81a99682",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-011ebfe001fc49010",
            "private_dns": "ip-10-2-4-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.4.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c87d82d9b2b3dd4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a20833eebd4264b6",
            "tags": {
              "Environment": "Production",
              "Name": "instance3ForBonVPC"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "instance3ForBonVPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa0ae44ca39be70c"
            ]
          },
          "dependencies": [
            "aws_security_group.forBonInstances",
            "aws_subnet.private_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance4ForBonVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-0a8d234788e7916df",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8d234788e7916df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0361d5a16dfba0727",
            "private_dns": "ip-10-2-4-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.4.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057af564dc89cac50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a20833eebd4264b6",
            "tags": {
              "Environment": "Production",
              "Name": "instance4ForBonVPC"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "instance4ForBonVPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa0ae44ca39be70c"
            ]
          },
          "dependencies": [
            "aws_security_group.forBonInstances",
            "aws_subnet.private_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance5ForBonVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-0b27b9a20d81a59de",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b27b9a20d81a59de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02bc80dbb4e4fe4d9",
            "private_dns": "ip-10-2-4-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.4.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0114996ec0fd7969c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a20833eebd4264b6",
            "tags": {
              "Environment": "Production",
              "Name": "instance5ForBonVPC"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "instance5ForBonVPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa0ae44ca39be70c"
            ]
          },
          "dependencies": [
            "aws_security_group.forBonInstances",
            "aws_subnet.private_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testTargetGroup1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/testTargetGroup1/8a6b7d12592606e4",
            "arn_suffix": "targetgroup/testTargetGroup1/8a6b7d12592606e4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/testTargetGroup1/8a6b7d12592606e4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "testTargetGroup1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testTargetGroup2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/testTargetGroup2/299f51e22c9a6472",
            "arn_suffix": "targetgroup/testTargetGroup2/299f51e22c9a6472",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/testTargetGroup2/299f51e22c9a6472",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "testTargetGroup2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "forBonALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:security-group/sg-029d6a56f05d37a18",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029d6a56f05d37a18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "forBonALB",
            "name_prefix": "",
            "owner_id": "745596943124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "forBonALB"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "forBonALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "forBonInstances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:security-group/sg-0aa0ae44ca39be70c",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa0ae44ca39be70c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "forBonInstances",
            "name_prefix": "",
            "owner_id": "745596943124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "forBonInstances"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "forBonInstances"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "forMauvaisALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:security-group/sg-0b9d7b77d3d517ed8",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9d7b77d3d517ed8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "forMauvaisALB",
            "name_prefix": "",
            "owner_id": "745596943124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "forMauvaisALB"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "forMauvaisALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "forMauvaisInstances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:security-group/sg-02b1cf301711a886e",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b1cf301711a886e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "forMauvaisInstances",
            "name_prefix": "",
            "owner_id": "745596943124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "forMauvaisInstances"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "forMauvaisInstances"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0a2c1ad00f8ed3785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2c1ad00f8ed3785",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Layer": "Application Layer",
              "Name": "private_subnet-1",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Test",
              "Layer": "Application Layer",
              "Name": "private_subnet-1",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-08fca3eda8b397eab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fca3eda8b397eab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Layer": "Application Layer",
              "Name": "private_subnet-2",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Test",
              "Layer": "Application Layer",
              "Name": "private_subnet-2",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0d673995848bc901a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d673995848bc901a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Layer": "Application Layer",
              "Name": "private_subnet-3",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Test",
              "Layer": "Application Layer",
              "Name": "private_subnet-3",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0b7014a339e3a1614",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7014a339e3a1614",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Layer": "Database Layer",
              "Name": "private_subnet-4",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Test",
              "Layer": "Database Layer",
              "Name": "private_subnet-4",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0a20833eebd4264b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a20833eebd4264b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Layer": "Application Layer",
              "Name": "private_subnet1",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Production",
              "Layer": "Application Layer",
              "Name": "private_subnet1",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0b39d6ae2c50da3e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.2.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b39d6ae2c50da3e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Layer": "Application Layer",
              "Name": "private_subnet2",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Production",
              "Layer": "Application Layer",
              "Name": "private_subnet2",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-09f3de4a1e082891e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f3de4a1e082891e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Layer": "Application Layer",
              "Name": "private_subnet3",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Production",
              "Layer": "Application Layer",
              "Name": "private_subnet3",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-03fc228f650942b7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fc228f650942b7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Layer": "Database Layer",
              "Name": "private_subnet4",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Production",
              "Layer": "Database Layer",
              "Name": "private_subnet4",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0b6c2e7b9f2ed81a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6c2e7b9f2ed81a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Layer": "Web Layer",
              "Name": "public_subnet-1",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Test",
              "Layer": "Web Layer",
              "Name": "public_subnet-1",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-01a9f2611a3465c02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a9f2611a3465c02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Layer": "Web Layer",
              "Name": "public_subnet-2",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Test",
              "Layer": "Web Layer",
              "Name": "public_subnet-2",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0aab2fe5a5fcba120",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aab2fe5a5fcba120",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Layer": "Web Layer",
              "Name": "public_subnet-3",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Test",
              "Layer": "Web Layer",
              "Name": "public_subnet-3",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-08c741e22018b783e"
          },
          "dependencies": [
            "aws_vpc.Mauvais_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-00ecc88450f886d8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ecc88450f886d8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Layer": "Web Layer",
              "Name": "public_subnet1",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Production",
              "Layer": "Web Layer",
              "Name": "public_subnet1",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-051aee3875070d135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051aee3875070d135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Layer": "Web Layer",
              "Name": "public_subnet2",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Production",
              "Layer": "Web Layer",
              "Name": "public_subnet2",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0c357ce9ecf217fbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c357ce9ecf217fbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Layer": "Web Layer",
              "Name": "public_subnet3",
              "Owner": "Joe Mauvais"
            },
            "tags_all": {
              "Environment": "Production",
              "Layer": "Web Layer",
              "Name": "public_subnet3",
              "Owner": "Joe Mauvais"
            },
            "vpc_id": "vpc-0b3a83c3d888a8c17"
          },
          "dependencies": [
            "aws_vpc.Bon_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Bon_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:vpc/vpc-0b3a83c3d888a8c17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0978bc3d44c43a4fc",
            "default_route_table_id": "rtb-06f6e81dda561d9af",
            "default_security_group_id": "sg-075705cd6e8e5024a",
            "dhcp_options_id": "dopt-01a2e8a7f50ce9b68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b3a83c3d888a8c17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f6e81dda561d9af",
            "owner_id": "745596943124",
            "tags": {
              "Environment": "Production",
              "Name": "Bon_VPC"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Bon_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Mauvais_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:vpc/vpc-08c741e22018b783e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c97bd6e3e0b53935",
            "default_route_table_id": "rtb-0e930b20dfd9b7665",
            "default_security_group_id": "sg-0293a8e5ed89dd256",
            "dhcp_options_id": "dopt-01a2e8a7f50ce9b68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08c741e22018b783e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e930b20dfd9b7665",
            "owner_id": "745596943124",
            "tags": {
              "Environment": "Test",
              "Name": "Mauvais_VPC"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Mauvais_VPC"
            }
          }
        }
      ]
    }
  ]
}